Add data operations
Add a data model for the information to be stored, and a repository
to collect data together. Plus unit tests for all.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Set Spring profile based on Maven profile
+spring.profiles.active=@spring.profiles.active@
 
+## Logging
+
+# Set limits on logging level for library code
+logging.level.root=WARN
+logging.level.org.springframework=WARN
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# But open them up for our own stuff
+logging.level.com.example=DEBUG
