--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # But open them up for our own stuff
 logging.level.com.example=DEBUG
+
+# Swagger
+springfox.documentation.swagger-ui.base-url=/api
